dokumentum nézet funkció gyors ikonról is

--- a/src/app/dokumentum/dokumentum-list/dokumentum-list.component.html
+++ b/src/app/dokumentum/dokumentum-list/dokumentum-list.component.html
@@ -13,6 +13,8 @@
              [items]="Dto"
              [colsets]="dokumentumservice.GridSettings"
              [letoltes]="true"
+             [nezet]="true"
+             (forview)="onNezet($event)"
              (forid)="onId($event)"
              (fordownload)="onLetoltesDirekt($event)"
              [ujTemplate]="griduj"
