háttérkép háttérbe küldése :)

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<div class="row no-gutters rounded mb-3" style="background-color: silver">
+<div class="row no-gutters rounded mb-3" style="background-color: silver; z-index: 0">
   <div *ngIf="szerepkorkivalasztva" class="col-auto mr-auto" style="margin-left: 14px">{{sessionservice.sessiondto.Particio}} / {{sessionservice.sessiondto.Csoport}} / {{sessionservice.sessiondto.Felhasznalo}}</div>
   <div *ngIf="szerepkorkivalasztva" class="col-auto" style="margin-left: 14px;margin-right: 18px">{{utolsouzenet}}</div>
 </div>
