dashboard egyszerűsítve és fejlesztve

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,9 @@
 <app-menu></app-menu>
 <div style="height: 49px"></div>
 <app-dashboard></app-dashboard>
+<div style="height: 10px"></div>
 
-<div style="margin-left: 5%;margin-right: 5%;width: auto;">
+<div style="margin-left: 2%;margin-right: 2%;width: auto;">
   <router-outlet></router-outlet>
 </div>
 
