pénztár választás után a tételek azonnal jönnek

--- a/src/app/penztar/penztar-list/penztar-list.component.html
+++ b/src/app/penztar/penztar-list/penztar-list.component.html
@@ -37,7 +37,7 @@
           </button>
 
           <button (click)="doNav(13)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
-            Tételek
+            Pénztártételek
           </button>
           <button (click)="doNav(14)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
             Export
