--- a/src/app/particio/particio-email/particio-email.component.html
+++ b/src/app/particio/particio-email/particio-email.component.html
@@ -1,97 +1,81 @@
 <div class="alapkeret">
   <h5>eMail</h5>
 
-  <div style="float: left;margin-right: 5px">
-    <div class="row no-gutters editform-row">
-      <div>
-        <div class="egylabel">Konfiguráció</div>
-        <div *ngFor="let entry of entries;let i = index" class="form-check">
-          <input class="form-check-input" type="radio" name="radiogroup" id="entry"
-                 [checked]="i === selected" (change)="selectedchange(i)">
-          <label class="form-check-label" for="entry">
-            {{entry}}
-          </label>
-        </div>
+  <form #f="ngForm" (ngSubmit)="onSubmit()">
+
+    <div class="editform-box">
+      <div class="editform-row">
+          <div class="egylabel">Konfiguráció</div>
+          <div *ngFor="let entry of entries;let i = index" class="form-check">
+            <input class="form-check-input" type="radio" name="radiogroup" id="entry"
+                   [checked]="i === selected" (change)="selectedchange(i)">
+            <label class="form-check-label" for="entry">
+              {{entry}}
+            </label>
+          </div>
       </div>
     </div>
-  </div>
 
-  <div style="float: left;">
-    <form #f="ngForm" (ngSubmit)="onSubmit()">
-
-      <div class="row no-gutters editform-row">
-        <div>
-          <div class="egylabel">Klienstipus</div>
-          <select type="text" class="form-control form-control-sm"
-                  [(ngModel)]="cEmails[selected].Tipus" name="m1">
-            <option>Gmail</option>
-          </select>
-        </div>
+    <div class="editform-box">
+      <div class="editform-row">
+        <div class="egylabel">Azonosító</div>
+        <input type="text" class="form-control form-control-sm oszlop4" id="m2"
+               autocomplete="off"
+               [(ngModel)]="cEmails[selected].Azonosito" name="m2">
       </div>
-
-      <div class="row no-gutters editform-row">
-        <div style="margin-right: 4px">
-          <div class="egylabel">Azonosító</div>
-          <input type="text" class="form-control form-control-sm oszlop4" id="m2"
-                 autocomplete="off"
-                 [(ngModel)]="cEmails[selected].Azonosito" name="m2">
-        </div>
-
-        <div>
-          <div class="egylabel">Jelszó</div>
-          <input type="text" class="form-control form-control-sm oszlop4" id="m3"
-                 autocomplete="off"
-                 [(ngModel)]="cEmails[selected].Jelszo" name="m3">
-        </div>
+      <div class="editform-row">
+        <div class="egylabel">Jelszó</div>
+        <input type="text" class="form-control form-control-sm oszlop4" id="m3"
+               autocomplete="off"
+               [(ngModel)]="cEmails[selected].Jelszo" name="m3">
       </div>
-
-      <div class="row no-gutters editform-row">
-        <div style="margin-right: 4px">
-          <div class="egylabel">A küldő neve</div>
-          <input type="text" class="form-control form-control-sm oszlop4" id="m4"
-                 autocomplete="off" maxlength="50"
-                 [(ngModel)]="cEmails[selected].KuldoNeve" name="m4">
-        </div>
-
-        <div>
-          <div class="egylabel">A küldő email címe</div>
-          <input type="text" class="form-control form-control-sm oszlop4" id="m5"
-                 autocomplete="off" maxlength="50"
-                 [(ngModel)]="cEmails[selected].KuldoEmailcime" name="m5">
-        </div>
+      <div class="editform-row">
+        <div class="egylabel">A küldő neve</div>
+        <input type="text" class="form-control form-control-sm oszlop4" id="m4"
+               autocomplete="off" maxlength="50"
+               [(ngModel)]="cEmails[selected].KuldoNeve" name="m4">
       </div>
-
-      <div class="row no-gutters editform-row">
-        <div style="margin-right: 4px">
-          <div class="egylabel">Custom host</div>
-          <input type="text" class="form-control form-control-sm oszlop4" id="m6"
-                 autocomplete="off" maxlength="50"
-                 [(ngModel)]="cEmails[selected].CustomHost" name="m6">
-        </div>
-
-        <div>
-          <div class="egylabel">Custom port</div>
-          <input type="number" class="form-control form-control-sm oszlop1" id="m7"
-                 autocomplete="off"
-                 [(ngModel)]="cEmails[selected].CustomPort" name="m7">
-        </div>
+      <div class="editform-row">
+        <div class="egylabel">A küldő email címe</div>
+        <input type="text" class="form-control form-control-sm oszlop4" id="m5"
+               autocomplete="off" maxlength="50"
+               [(ngModel)]="cEmails[selected].KuldoEmailcime" name="m5">
       </div>
+    </div>
 
-      <div class="row no-gutters editform-row">
-        <div>
-          <div class="egylabel">Ssl</div>
-          <select type="text" class="form-control form-control-sm"
-                  [(ngModel)]="cEmails[selected].Ssl" name="m8">
-            <option value="false">Nem</option>
-            <option value="true">Igen</option>
-          </select>
-        </div>
+    <div class="editform-box">
+      <div class="editform-row">
+        <div class="egylabel">Klienstipus</div>
+        <select type="text" class="form-control form-control-sm"
+                [(ngModel)]="cEmails[selected].Tipus" name="m1">
+          <option>Gmail</option>
+        </select>
       </div>
+      <div class="editform-row">
+        <div class="egylabel">Custom host</div>
+        <input type="text" class="form-control form-control-sm oszlop4" id="m6"
+               autocomplete="off" maxlength="50"
+               [(ngModel)]="cEmails[selected].CustomHost" name="m6">
+      </div>
+      <div class="editform-row">
+        <div class="egylabel">Custom port</div>
+        <input type="number" class="form-control form-control-sm oszlop1" id="m7"
+               autocomplete="off"
+               [(ngModel)]="cEmails[selected].CustomPort" name="m7">
+      </div>
+      <div class="editform-row">
+        <div class="egylabel">Ssl</div>
+        <select type="text" class="form-control form-control-sm oszlop2"
+                [(ngModel)]="cEmails[selected].Ssl" name="m8">
+          <option value="false">Nem</option>
+          <option value="true">Igen</option>
+        </select>
+      </div>
+    </div>
 
-      <div class="row no-gutters editform-row">
-        <button class="btn btn-sm btn-primary" [disabled]="!f.valid" type="submit">Ok</button>
-        <button class="btn btn-sm btn-default" style="margin-left:3px;" type="button" (click)="cancel()">Mégsem</button>
-      </div>
-    </form>
-  </div>
+    <div class="editform-row editform-okcancel">
+      <button class="btn btn-sm btn-primary" [disabled]="!f.valid" type="submit">Ok</button>
+      <button class="btn btn-sm btn-default" style="margin-left:3px;" type="button" (click)="cancel()">Mégsem</button>
+    </div>
+  </form>
 </div>
