--- a/src/app/particio/particio-projekt/particio-projekt.component.html
+++ b/src/app/particio/particio-projekt/particio-projekt.component.html
@@ -2,110 +2,89 @@
   <h5>Projekt</h5>
 
   <form #f="ngForm" (ngSubmit)="onSubmit()">
-
-    <div class="row no-gutters editform-row">
-      <div>
-        <div class="egylabel">Ajánlat iratkód</div>
-        <input type="number" class="form-control form-control-sm oszlop2" id="m1"
-               autocomplete="off"
-               [(ngModel)]="cProjekt.AjanlatIratkod" name="m1">
+    <div class="editform-box">
+      <div class="editform-row">
+          <div class="egylabel">Ajánlat iratkód</div>
+          <input type="number" class="form-control form-control-sm oszlop2" id="m1"
+                 autocomplete="off"
+                 [(ngModel)]="cProjekt.AjanlatIratkod" name="m1">
       </div>
     </div>
 
-    <div class="row no-gutters editform-row">
-      <div>
-        <div class="egylabel">Elégedettségi felmérés iratkód</div>
-        <input type="number" class="form-control form-control-sm oszlop2" id="m2"
-               autocomplete="off"
-               [(ngModel)]="cProjekt.ElegedettsegiFelmeresIratkod" name="m2">
+    <div class="editform-box">
+      <div class="editform-row">
+          <div class="egylabel">Szerződés iratkód</div>
+          <input type="number" class="form-control form-control-sm oszlop2" id="m8"
+                 autocomplete="off"
+                 [(ngModel)]="cProjekt.SzerzodesIratkod" name="m8">
+      </div>
+      <div class="editform-row">
+          <div class="egylabel">Szállítási szerződés iratkód</div>
+          <input type="number" class="form-control form-control-sm oszlop2" id="m7"
+                 autocomplete="off"
+                 [(ngModel)]="cProjekt.SzallitasiSzerzodesIratkod" name="m7">
+      </div>
+      <div class="editform-row">
+          <div class="egylabel">Feltételes szerződés iratkód</div>
+          <input type="number" class="form-control form-control-sm oszlop2" id="m9"
+                 autocomplete="off"
+                 [(ngModel)]="cProjekt.FeltetelesSzerzodesIratkod" name="m9">
+      </div>
+      <div class="editform-row">
+          <div class="egylabel">OFT szerződés iratkód</div>
+          <input type="number" class="form-control form-control-sm oszlop2" id="m10"
+                 autocomplete="off"
+                 [(ngModel)]="cProjekt.OFTSzerzodesIratkod" name="m10">
+      </div>
+      <div class="editform-row">
+          <div class="egylabel">HMKE tulajdonos hozzájárulás iratkód</div>
+          <input type="number" class="form-control form-control-sm oszlop2" id="m11"
+                 autocomplete="off"
+                 [(ngModel)]="cProjekt.HMKEtulajdonoshozzajarulasIratkod" name="m11">
       </div>
     </div>
 
-    <div class="row no-gutters editform-row">
-      <div>
-        <div class="egylabel">Készrejelentés NKM iratkód</div>
-        <input type="number" class="form-control form-control-sm oszlop2" id="m3"
-               autocomplete="off"
-               [(ngModel)]="cProjekt.KeszrejelentesNkmIratkod" name="m3">
+    <div class="editform-box">
+      <div class="editform-row">
+          <div class="egylabel">Munkalap iratkód</div>
+          <input type="number" class="form-control form-control-sm oszlop2" id="m6"
+                 autocomplete="off"
+                 [(ngModel)]="cProjekt.MunkalapIratkod" name="m6">
+      </div>
+      <div class="editform-row">
+          <div class="egylabel">Elégedettségi felmérés iratkód</div>
+          <input type="number" class="form-control form-control-sm oszlop2" id="m2"
+                 autocomplete="off"
+                 [(ngModel)]="cProjekt.ElegedettsegiFelmeresIratkod" name="m2">
       </div>
     </div>
 
-    <div class="row no-gutters editform-row">
-      <div>
-        <div class="egylabel">Készrejelentés ELMŰ-ÉMÁSZ iratkód</div>
-        <input type="number" class="form-control form-control-sm oszlop2" id="m4"
-               autocomplete="off"
-               [(ngModel)]="cProjekt.KeszrejelentesElmuemaszIratkod" name="m4">
+    <div class="editform-box">
+      <div class="editform-row">
+          <div class="egylabel">Készrejelentés NKM iratkód</div>
+          <input type="number" class="form-control form-control-sm oszlop2" id="m3"
+                 autocomplete="off"
+                 [(ngModel)]="cProjekt.KeszrejelentesNkmIratkod" name="m3">
+      </div>
+      <div class="editform-row">
+          <div class="egylabel">Készrejelentés ELMŰ-ÉMÁSZ iratkód</div>
+          <input type="number" class="form-control form-control-sm oszlop2" id="m4"
+                 autocomplete="off"
+                 [(ngModel)]="cProjekt.KeszrejelentesElmuemaszIratkod" name="m4">
+      </div>
+      <div class="editform-row">
+          <div class="egylabel">Készrejelentés E.ON iratkód</div>
+          <input type="number" class="form-control form-control-sm oszlop2" id="m5"
+                 autocomplete="off"
+                 [(ngModel)]="cProjekt.KeszrejelentesEonIratkod" name="m5">
       </div>
     </div>
 
-    <div class="row no-gutters editform-row">
-      <div>
-        <div class="egylabel">Készrejelentés E.ON iratkód</div>
-        <input type="number" class="form-control form-control-sm oszlop2" id="m5"
-               autocomplete="off"
-               [(ngModel)]="cProjekt.KeszrejelentesEonIratkod" name="m5">
-      </div>
-    </div>
-
-    <div class="row no-gutters editform-row">
-      <div>
-        <div class="egylabel">Munkalap iratkód</div>
-        <input type="number" class="form-control form-control-sm oszlop2" id="m6"
-               autocomplete="off"
-               [(ngModel)]="cProjekt.MunkalapIratkod" name="m6">
-      </div>
-    </div>
-
-    <div class="row no-gutters editform-row">
-      <div>
-        <div class="egylabel">Szállítási szerződés iratkód</div>
-        <input type="number" class="form-control form-control-sm oszlop2" id="m7"
-               autocomplete="off"
-               [(ngModel)]="cProjekt.SzallitasiSzerzodesIratkod" name="m7">
-      </div>
-    </div>
-
-    <div class="row no-gutters editform-row">
-      <div>
-        <div class="egylabel">Szerződés iratkód</div>
-        <input type="number" class="form-control form-control-sm oszlop2" id="m8"
-               autocomplete="off"
-               [(ngModel)]="cProjekt.SzerzodesIratkod" name="m8">
-      </div>
-    </div>
-
-    <div class="row no-gutters editform-row">
-      <div>
-        <div class="egylabel">Feltételes szerződés iratkód</div>
-        <input type="number" class="form-control form-control-sm oszlop2" id="m9"
-               autocomplete="off"
-               [(ngModel)]="cProjekt.FeltetelesSzerzodesIratkod" name="m9">
-      </div>
-    </div>
-
-    <div class="row no-gutters editform-row">
-      <div>
-        <div class="egylabel">OFT szerződés iratkód</div>
-        <input type="number" class="form-control form-control-sm oszlop2" id="m10"
-               autocomplete="off"
-               [(ngModel)]="cProjekt.OFTSzerzodesIratkod" name="m10">
-      </div>
-    </div>
-
-    <div class="row no-gutters editform-row">
-      <div>
-        <div class="egylabel">HMKE tulajdonos hozzájárulás iratkód</div>
-        <input type="number" class="form-control form-control-sm oszlop2" id="m11"
-               autocomplete="off"
-               [(ngModel)]="cProjekt.HMKEtulajdonoshozzajarulasIratkod" name="m11">
-      </div>
-    </div>
-
-    <div class="row no-gutters editform-row">
+    <div class="editform-row editform-okcancel">
       <button class="btn btn-sm btn-primary" [disabled]="!f.valid" type="submit">Ok</button>
       <button class="btn btn-sm btn-default" style="margin-left:3px;" type="button" (click)="onCancel()">Mégsem</button>
     </div>
   </form>
+
 </div>
 
