--- a/src/app/particio/particio-bizonylat/particio-bizonylat.component.html
+++ b/src/app/particio/particio-bizonylat/particio-bizonylat.component.html
@@ -3,34 +3,30 @@
 
   <form #f="ngForm" (ngSubmit)="onSubmit()">
 
-    <div class="row no-gutters editform-row">
-      <div>
-        <div class="egylabel">Bizonylatkép iratkód</div>
-        <input type="number" class="form-control form-control-sm oszlop2" id="m1"
-               autocomplete="off"
-               [(ngModel)]="cBizonylat.BizonylatkepIratkod" name="m1">
+    <div class="editform-box">
+      <div class="editform-row">
+          <div class="egylabel">Bizonylatkép iratkód</div>
+          <input type="number" class="form-control form-control-sm oszlop2" id="m1"
+                 autocomplete="off"
+                 [(ngModel)]="cBizonylat.BizonylatkepIratkod" name="m1">
+      </div>
+
+      <div class="editform-row">
+          <div class="egylabel">Eredeti példány</div>
+          <input type="number" class="form-control form-control-sm oszlop2" id="m2"
+                 autocomplete="off"
+                 [(ngModel)]="cBizonylat.EredetipeldanyokSzama" name="m2">
+      </div>
+
+      <div class="editform-row">
+          <div class="egylabel">Másolatok</div>
+          <input type="number" class="form-control form-control-sm oszlop2" id="m3"
+                 autocomplete="off"
+                 [(ngModel)]="cBizonylat.MasolatokSzama" name="m3">
       </div>
     </div>
 
-    <div class="row no-gutters editform-row">
-      <div>
-        <div class="egylabel">Eredeti példány</div>
-        <input type="number" class="form-control form-control-sm oszlop2" id="m2"
-               autocomplete="off"
-               [(ngModel)]="cBizonylat.EredetipeldanyokSzama" name="m2">
-      </div>
-    </div>
-
-    <div class="row no-gutters editform-row">
-      <div>
-        <div class="egylabel">Másolatok</div>
-        <input type="number" class="form-control form-control-sm oszlop2" id="m3"
-               autocomplete="off"
-               [(ngModel)]="cBizonylat.MasolatokSzama" name="m3">
-      </div>
-    </div>
-
-    <div class="row no-gutters editform-row">
+    <div class="editform-row editform-okcancel">
       <button class="btn btn-sm btn-primary" [disabled]="!f.valid" type="submit">Ok</button>
       <button class="btn btn-sm btn-default" style="margin-left:3px;" type="button" (click)="onCancel()">Mégsem</button>
     </div>
