--- a/src/app/particio/particio-volume/particio-volume.component.html
+++ b/src/app/particio/particio-volume/particio-volume.component.html
@@ -3,25 +3,23 @@
 
   <form #f="ngForm" (ngSubmit)="onSubmit()">
 
-    <div class="row no-gutters editform-row">
-      <div>
-        <div class="egylabel">Új volume max. méret</div>
-        <input type="number" class="form-control form-control-sm oszlop3" id="m1"
-               autocomplete="off"
-               [(ngModel)]="cVolume.UjvolumeMaxmeret" name="m1">
+    <div class="editform-box">
+      <div class="editform-row">
+          <div class="egylabel">Új volume max. méret</div>
+          <input type="number" class="form-control form-control-sm oszlop3" id="m1"
+                 autocomplete="off"
+                 [(ngModel)]="cVolume.UjvolumeMaxmeret" name="m1">
+      </div>
+
+      <div class="editform-row">
+          <div class="egylabel">Új volume elérési út</div>
+          <input type="text" class="form-control form-control-sm oszlop6" id="m2"
+                 autocomplete="off"
+                 [(ngModel)]="cVolume.UjvolumeEleresiut" name="m2">
       </div>
     </div>
 
-    <div class="row no-gutters editform-row">
-      <div>
-        <div class="egylabel">Új volume elérési út</div>
-        <input type="text" class="form-control form-control-sm oszlop6" id="m2"
-               autocomplete="off"
-               [(ngModel)]="cVolume.UjvolumeEleresiut" name="m2">
-      </div>
-    </div>
-
-    <div class="row no-gutters editform-row">
+    <div class="editform-row editform-okcancel">
       <button class="btn btn-sm btn-primary" [disabled]="!f.valid" type="submit">Ok</button>
       <button class="btn btn-sm btn-default" style="margin-left:3px;" type="button" (click)="cancel()">Mégsem</button>
     </div>
