primitíveknél az új stílus alkalmazása

--- a/src/app/particio/particio-bizonylat/particio-bizonylat.component.html
+++ b/src/app/particio/particio-bizonylat/particio-bizonylat.component.html
@@ -26,7 +26,7 @@
       </div>
     </div>
 
-    <div class="editform-row editform-okcancel">
+    <div class="editform-okcancel">
       <button class="btn btn-sm btn-primary" [disabled]="!f.valid" type="submit">Ok</button>
       <button class="btn btn-sm btn-default" style="margin-left:3px;" type="button" (click)="onCancel()">Mégsem</button>
     </div>
