--- a/src/app/particio/particio-szallito/particio-szallito.component.html
+++ b/src/app/particio/particio-szallito/particio-szallito.component.html
@@ -66,13 +66,7 @@
       </div>
     </div>
 
-
-
-
-
-
-
-    <div class="editform-row editform-okcancel">
+    <div class="editform-okcancel">
       <button class="btn btn-sm btn-primary" [disabled]="!f.valid" type="submit">Ok</button>
       <button class="btn btn-sm btn-default" style="margin-left:3px;" type="button" (click)="cancel()">Mégsem</button>
     </div>
