--- a/src/app/primitiv/felhasznalo/felhasznalo-jelszo/felhasznalo-jelszo.component.html
+++ b/src/app/primitiv/felhasznalo/felhasznalo-jelszo/felhasznalo-jelszo.component.html
@@ -3,15 +3,15 @@
 
   <form #f="ngForm" (ngSubmit)="onSubmit()">
 
-    <div class="row no-gutters editform-row">
-      <div style="margin-right: 5px">
+    <div class="editform-box">
+      <div class="editform-row">
         <div class="egylabel">Jelszó</div>
         <input type="password" class="form-control form-control-sm" id="jelszo"
                maxlength="100" required autocomplete="off"
                [(ngModel)]="jelszo" name="jelszo">
       </div>
 
-      <div style="display: inline-block; margin-right: 5px">
+      <div class="editform-row">
         <div class="egylabel">Jelszó újra</div>
         <input type="password" class="form-control form-control-sm" id="jelszoujra"
                maxlength="100" required autocomplete="off"
@@ -19,7 +19,7 @@
       </div>
     </div>
 
-    <div class="row no-gutters editform-row">
+    <div class="editform-okcancel">
       <button class="btn btn-sm btn-primary" [disabled]="!f.valid" type="submit">Ok</button>
       <button class="btn btn-sm btn-default" style="margin-left:3px;" type="button" (click)="onCancel()">Mégsem</button>
     </div>
