--- a/src/app/projekt/projekt-iratminta/projekt-iratminta.component.html
+++ b/src/app/projekt/projekt-iratminta/projekt-iratminta.component.html
@@ -17,20 +17,35 @@
       <button (click)="hmketulajdonoshozzajarulas()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         HMKE tulajdonos hozzájárulás
       </button>
+    </nav>
+  </div>
+  <div style="paddig-top: 6px;padding-bottom: 6px">
+    <nav>
       <button (click)="munkalap()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         Munkalap
       </button>
       <button (click)="elegedettseg()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         Elégedettségi felmérés
       </button>
+    </nav>
+  </div>
+  <div style="paddig-top: 6px;padding-bottom: 6px">
+    <nav>
       <button (click)="elmuemasz()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         ELMŰ-ÉMÁSZ készrejelentés
       </button>
       <button (click)="eon()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         E.ON készrejelentés
       </button>
-      <button (click)="demasz()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+      <button (click)="mvm()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         MVM készrejelentés
+      </button>
+
+      <button (click)="eonelmu()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+        EON/ELMÜ készrejelentés
+      </button>
+      <button (click)="mvmemasz()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+        MVM/ÉMÁSZ készrejelentés
       </button>
     </nav>
   </div>
