--- a/src/app/projekt/projekt-list/projekt-list.component.html
+++ b/src/app/projekt/projekt-list/projekt-list.component.html
@@ -1,6 +1,6 @@
 <div class="alapkeret" [appSpinner]="eppFrissit">
   <h5>{{projektservice.cim}}</h5>
-  <app-projekttoolbar [Statuszszurok]="statuszszurok"
+  <app-projekttoolbar [Statuszszurok]="projektservice.statuszszurok"
                       [Jegyzetszurok]="jegyzetszurok"
                       [Szurok]="szurok"
                       [(statuszszempont)]="statuszszempont"
