--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -6,8 +6,19 @@
       <i *ngIf="mode === 1" class="fa fa-arrow-up" aria-hidden="true" (click)="alap()"></i>
     </div>
     <ng-container *ngIf="mode === 1">
-      <div style="height: 50px">
-      </div>
+      <table class="table table-bordered table-sm table-responsive" style="border: none; margin-left: 14px; margin-top: 20px; padding-bottom: 20px">
+        <thead>
+          <tr>
+            <th>Időpont</th><th>Üzenet</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let item of Dto">
+            <td>{{item.Idopont | datetimehun}}</td>
+            <td>{{item.Uzenet}}</td>
+          </tr>
+        </tbody>
+      </table>
     </ng-container>
   </div>
 </ng-container>
