--- a/src/app/dokumentum/pdfnezet/pdfnezet.component.html
+++ b/src/app/dokumentum/pdfnezet/pdfnezet.component.html
@@ -1,7 +1,7 @@
 <div class="alapkeret">
   <h5>Nézet</h5>
-  <div style="width: 100vh">
-    <ngx-extended-pdf-viewer [base64Src]="pdf" height="50vh" [showOpenFileButton]="false" [zoom]="'page-width'" [textLayer]="true">
+  <div style="width: 75vw">
+    <ngx-extended-pdf-viewer [base64Src]="pdf" height="60vh" [showOpenFileButton]="false" [zoom]="'page-width'" [textLayer]="true">
     </ngx-extended-pdf-viewer>
   </div>
 </div>
