--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,11 +1,17 @@
 <ng-container *ngIf="szerepkorkivalasztva">
   <div style="background-color: silver">
-    <div style="margin-left: 14px;padding-top: 5px;padding-bottom: 5px">
-      {{sessionservice.sessiondto.Particio}} / {{sessionservice.sessiondto.Csoport}} / {{sessionservice.sessiondto.Felhasznalo}} - {{serverurl}}
+    <div class="db_mezo">
+      {{sessionservice.sessiondto.Particio}} / {{sessionservice.sessiondto.Csoport}} / {{sessionservice.sessiondto.Felhasznalo}}
       <i *ngIf="mode === 0" class="fa fa-arrow-down" aria-hidden="true" (click)="reszletes()"></i>
       <i *ngIf="mode === 1" class="fa fa-arrow-up" aria-hidden="true" (click)="alap()"></i>
     </div>
     <ng-container *ngIf="mode === 1">
+      <div class="db_mezo">
+        {{serverurl}}
+      </div>
+      <div class="db_mezo">
+        {{screenWidth}} x {{screenHeight}}
+      </div>
       <table class="table table-bordered table-sm table-responsive" style="border: none; margin-left: 14px; margin-top: 20px; padding-bottom: 20px">
         <thead>
           <tr>
